update mongoid config and switch to pusher

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>grp of ppl</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application", "http://nan.enflick.com:9292/faye.js" %>
+  <%= javascript_include_tag "application", "http://js.pusher.com/1.12/pusher.min.js" %>
   <%= csrf_meta_tags %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
