--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,9 @@
 <script type="text/javascript">
-$(function() {
-  var faye = new Faye.Client('http://nan.enflick.com:9292/faye');
-  faye.subscribe('/groups/<%= @group.id %>', function(data) {
+  var pusher = new Pusher('<%= Pusher.key %>');
+  var channel = pusher.subscribe('groups-<%= @group.id %>');
+  channel.bind('new-post', function(data) {
     eval(data);
   });
-});
 </script>
 
 <div class="row-fluid">
