--- a/app/views/invite_mailer/group_invite_email.text.erb
+++ b/app/views/invite_mailer/group_invite_email.text.erb
@@ -1,3 +1,3 @@
-You have been invited to join a group!
+You have been invited to join <% @group.name %>!
 ======================================
 <%= join_url(:id => @group.id, :token => @token) %>
