--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,9 @@
     </div>
   <% end %>
 
+  <%= f.label 'Display name' %><%= f.text_field :name %>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, :class => "btn btn-primary btn-large" %>
   </div>
 <% end %>
