--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,30 @@
     <h1 style="font-size:500%; padding-top:80px; padding-bottom:20px;">grp of ppl</h1>
     <h3>Because being together is more fun?</h3>
     <%= button_to "Start a new group!", { :action => "new" }, { :class => "btn btn-large btn-primary", :method => "get", :style => "font-size:250%; margin-top:20px;" } %>
+    <a href="#forgot-modal" data-toggle="modal" onclick="$('#email').focus();">Forgot your sign in link?</a>
   </div>
 </div>
+
+<div class="modal hide" id="forgot-modal">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>I forgot my sign in link... :(</h3>
+  </div>
+  <%= form_tag({:action => 'forgot' }, {:style => "padding:0;margin:0;"}) do %>
+    <div class="modal-body">
+      <div class="row-fluid">
+        <%= text_field_tag :email, nil, :placeholder => "your@email.com", :class => "span12", :id => "email-input" %>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#" class="btn" data-dismiss="modal">Close</a>
+      <%= submit_tag "Send me my link!", :class => "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
+
+<script type="text/javascript">
+  $('#forgot-modal').on('shown', function() {
+      $('#email-input').focus();
+    });
+</script>
