prevent inviting already members of group

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
         <ul class="nav pull-left">
           <li class="divider-vertical"></li>
           <li><%= link_to "My Groups", :controller => "groups", :action => "index" %></li>
+          <li class="divider-vertical"></li>
           <li><%= link_to "New Group", :controller => "groups", :action => "new" %></li>
         </ul>
 
