--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,28 +1,11 @@
 <div id="post-<%= post.id %>">
   <div class="post-level" style="margin-left: <%= post.nest_level * 20 %>px;">
     <div class="post-container">
-      <p>
-      <strong><%= post.user.email %></strong> <em><%= time_ago_in_words post.created_at %> ago</em>
-      </p>
-      <p>
-      <% JSON.parse(post.data).each do |data| %>
-        <% if data["type"] == Post::Type::LINK %>
-          <%= link_to data["data"], data["data"] %>
-        <% elsif data["type"] == Post::Type::IMAGE %>
-          <ul class="thumbnails">
-            <li class="span3"><%= link_to image_tag(data["data"]), data["data"], :class => "thumbnail" %></li>
-          </ul>
-        <% elsif data["type"] == Post::Type::YOUTUBE %>
-          <iframe class="thumbnail" title="YouTube video player" width="640" height="390" src="http://www.youtube.com/embed/<%= data['data'] %>" frameborder="0" allowfullscreen></iframe>
-        <% else %>
-          <%= data["data"] %>
-        <% end %>
+      <% if post.user.nil? %>
+        <%= render :partial => 'posts/system_post', :locals => { :user_post => post, :group => group } %>
+      <% else %>
+        <%= render :partial => 'posts/user_post', :locals => { :user_post => post, :group => group } %>
       <% end %>
-      </p>
-      <ul class="post-nav">
-        <li><%= link_to "reply", { :controller => 'groups', :action => 'show_reply', :id => group.id, :post_id => post.id }, :remote => true, :method => :get %></li>
-        <li><%= link_to "permalink", "#" %></li>
-      </ul>
     </div>
 
     <% post.child_posts.desc(:created_at).each do |child_post| %>
