--- a/app/views/groups/_share_form.html.erb
+++ b/app/views/groups/_share_form.html.erb
@@ -3,6 +3,6 @@
   <%= form_for [@group, Post.new], :remote => true do |p| %>
     <%= p.text_area :data, :class => "span12", :style => "height:100px;", :id => "share-form-input" %>
     <%= p.submit "Post it!", :class => "btn" %>
-    <%= link_to 'Cancel', { :controller => 'groups', :action => 'hide_share' }, :remote => true, :method => :get, :class => "btn" %>
+    <%= link_to 'Cancel', "#", :class => "btn", :onclick => "$('#share-form').remove();" %>
   <% end %>
 </div>
