--- a/app/views/groups/_share_form.html.erb
+++ b/app/views/groups/_share_form.html.erb
@@ -2,7 +2,13 @@
   <h2>Share something new:</h2>
   <%= form_for [@group, Post.new], :remote => true do |p| %>
     <%= p.text_area :data, :class => "span12", :style => "height:100px;", :id => "share-form-input" %>
-    <%= p.submit "Post it!", :class => "btn" %>
+    <%= p.submit "Post it!", :class => "btn", :id => "share-form-submit" %>
     <%= link_to 'Cancel', "#", :class => "btn", :onclick => "$('#share-form').remove();" %>
   <% end %>
 </div>
+
+<script type="text/javascript">
+  $('#share-form-input').bind('keyup', 'ctrl+return', function(){
+    $('#share-form-submit').click();
+  });
+</script>
