attempt to fix repeat send bug

--- a/app/views/groups/_share_form.html.erb
+++ b/app/views/groups/_share_form.html.erb
@@ -8,7 +8,18 @@
 </div>
 
 <script type="text/javascript">
+  var clicked = false;
   $('#share-form-input').bind('keyup', 'ctrl+return', function(){
-    $('#share-form-submit').click();
+      if (!clicked) {
+        $('#share-form-submit').click();
+        clicked = true;
+      }
+  });
+
+  $('#share-form-input').bind('keyup', 'ctrl+enter', function(){
+      if (!clicked) {
+        $('#share-form-submit').click();
+        clicked = true;
+      }
   });
 </script>
