--- a/app/views/groups/_reply_form.html.erb
+++ b/app/views/groups/_reply_form.html.erb
@@ -9,7 +9,18 @@
 </div>
 
 <script type="text/javascript">
+  var clicked = false;
   $('#reply-form-<%= parent_post.id %>-input').bind('keyup', 'ctrl+return', function(){
-    $('#reply-form-<%= parent_post.id %>-submit').click();
+      if (!clicked) {
+        $('#reply-form-<%= parent_post.id %>-submit').click();
+        clicked = true;
+      }
+  });
+
+  $('#reply-form-<%= parent_post.id %>-input').bind('keyup', 'ctrl+enter', function(){
+      if (!clicked) {
+        $('#reply-form-<%= parent_post.id %>-submit').click();
+        clicked = true;
+      }
   });
 </script>
