--- a/app/views/groups/_share_button.html.erb
+++ b/app/views/groups/_share_button.html.erb
@@ -1,3 +1,3 @@
 <div id="share-button">
-  <%= button_to 'Share something!', { :controller => 'groups', :action => 'show_share' }, :remote => true, :method => :get, :class => "btn btn-primary btn-large span12", :style => 'font-size:large;' %>
+  <%= link_to 'Share something!', '#', :class => "btn btn-primary btn-large span12", :style => 'font-size:large;', :onclick => "$('#share-form').fadeToggle();" %>
 </div>
