--- a/app/views/groups/_share_form.html.erb
+++ b/app/views/groups/_share_form.html.erb
@@ -1,10 +1,12 @@
-<div class="span12 well" id="share-form">
-  <h2>Share something new:</h2>
-  <%= form_for [@group, Post.new], :remote => true do |p| %>
-    <%= p.text_area :data, :class => "span12", :style => "height:100px;", :id => "share-form-input" %>
-    <%= p.submit "Post it!", :class => "btn", :id => "share-form-submit" %>
-    <%= link_to 'Cancel', "#", :class => "btn", :onclick => "$('#share-form').remove();" %>
-  <% end %>
+<div class="row-fluid" style="padding-top:10px;">
+  <div class="span12 well" id="share-form" style="display:none;">
+    <h2>Share something new:</h2>
+    <%= form_for [@group, Post.new], :remote => true do |p| %>
+      <%= p.text_area :post_data, :class => "span12", :style => "height:100px;", :id => "share-form-input" %>
+      <%= p.submit "Post it!", :class => "btn", :id => "share-form-submit" %>
+      <%= link_to 'Cancel', "#", :class => "btn", :onclick => "$('#share-form').fadeToggle();" %>
+    <% end %>
+  </div>
 </div>
 
 <script type="text/javascript">
