--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,13 +8,13 @@
       <% end %>
     </div>
 
-    <div style="margin-left:10px; padding-left:10px; border-left:1px dashed #dddddd;">
-      <% unless post.group.blank? || post.child_posts.empty? %>
-        <div class="post-level-toggle">
-          <a id="post-level-hide-<%= post.id %>" href="#" onclick="$('#post-level-<%= post.id %>').hide('blind', {}, 500); $('#post-level-hide-<%= post.id %>').hide('', {}, 500); $('#post-level-show-<%= post.id %>').show('', {}, 500);"><i class="icon-minus"></i> Hide discussion...</a> 
-          <a id="post-level-show-<%= post.id %>" style="display:none;" href="#" onclick="$('#post-level-<%= post.id %>').show('blind', {}, 500); $('#post-level-hide-<%= post.id %>').show('', {}, 500); $('#post-level-show-<%= post.id %>').hide('', {}, 500);"><i class="icon-plus"></i> Show discussion... <%= post.child_count %> posts hidden</a>
-        </div>
-      <% end %>
+    <div class="post-children" style="margin-left:10px; padding-left:10px; border-left:1px dashed #dddddd;">
+      <div class="post-level-toggle">
+        <% unless post.group.blank? || post.child_posts.empty? %>
+          <a id="post-level-hide-<%= post.id %>" href="#" onclick="$('#post-level-<%= post.id %>').slideToggle(); $('#post-level-hide-<%= post.id %>').toggle(); $('#post-level-show-<%= post.id %>').toggle();"><i class="icon-minus"></i> Hide discussion...</a> 
+          <a id="post-level-show-<%= post.id %>" style="display:none;" href="#" onclick="$('#post-level-<%= post.id %>').slideToggle(); $('#post-level-hide-<%= post.id %>').toggle(); $('#post-level-show-<%= post.id %>').toggle();"><i class="icon-plus"></i> Show discussion... <%= post.child_count %> posts hidden</a>
+        <% end %>
+      </div>
 
       <div id="post-level-<%= post.id %>">
         <% post.child_posts.desc(:created_at).each do |child_post| %>
