--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,3 +1,5 @@
-<% publish "groups-#{@group.id}", 'new-post' do %>
-  <%= render(:partial => 'posts/post', :locals => { :post => @post, :group => @group }) %>
+<% publish "groups-#{@group.id}", 'new-post', { :id => @post.id } do %>
+  <%= render(:partial => 'posts/post', :locals => { :post => @post, :group => @group, :hidden => true }) %>
 <% end %>
+$('#share-form').fadeOut();
+$('#share-form-input').val('');
